crates/jarl-core/src/lints/testthat/expect_null/snapshots/jarl_core__lints__testthat__expect_null__tests__no_fix_with_comments.snap
---
source: crates/jarl-core/src/lints/testthat/expect_null/mod.rs
expression: "get_fixed_text(vec![\"# leading comment\\nexpect_equal(x, NULL)\",\n\"expect_equal(x, # comment\\nNULL)\",\n\"expect_equal(x, NULL) # trailing comment\",], \"expect_null\", None)"
---
OLD:
====
# leading comment
expect_equal(x, NULL)
NEW:
====
# leading comment
expect_null(x)

OLD:
====
expect_equal(x, # comment
NULL)
NEW:
====
expect_equal(x, # comment
NULL)

OLD:
====
expect_equal(x, NULL) # trailing comment
NEW:
====
expect_null(x) # trailing comment
